@@ -1,3 +1,12 @@
+Wed Aug  6 23:12:35 UTC 2008  Yan Dai  <dai_y@ociweb.com>
+
+        * tests/Big_Oneways/Peer.cpp:
+
+          Updated create_session() to explicitly activate servant for CORBA e 
+          build since CORBA e does not allow implicit servant activation. This
+          prevents WrongPolicy exception raised and hence avoids the MARSHAL
+          exception when trying to send WrongPolicy reply exception.
+
 Wed Aug  6 22:38:46 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>
 
         * configure.ac:
